--- a/src/components/products/ProductRow/ProductRow.module.sass
+++ b/src/components/products/ProductRow/ProductRow.module.sass
@@ -22,6 +22,10 @@
       gap: 0.5rem
       margin: 0.5rem 0
 
+      &__icon
+        display: flex
+        align-self: center
+
     &__title
       font-size: 1rem
 
